k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 3000 # Adjust port if your API runs on a different port
      targetPort: 3000 # Port your API container listens on
  type: ClusterIP
