k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 8000 # Adjust port if your API runs on a different port
      targetPort: 8000 # Port your API container listens on
  type: ClusterIP
